[package]
name = "dtools"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Volker Schwaberow <volker@schwaberow.de>"]
description = "A collection of tools for working with Commodore disk images"

[lib]
name = "d64lib"
path = "src/lib.rs"

[[bin]]
name = "dtools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
hex = "0.4.3"
thiserror = "1.0"
